<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgc_main"
    android:theme="@style/theme1"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/border_radius"
        android:fontFamily="casual"
        android:paddingVertical="5dp"
        android:text="@string/titulo_2"
        android:textAlignment="center"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/descrip_linkedin"
        app:layout_constraintEnd_toStartOf="@+id/btnLinkedin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/icons8_linkedin_48" />

    <Button
        android:id="@+id/btnLinkedin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="122dp"
        android:text="@string/btn_linkedin"
        android:theme="@style/theme_btn_main2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/descrip_wapp"
        app:layout_constraintEnd_toStartOf="@+id/btnWhatsapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/icons8_whatsapp_48"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnWhatsapp"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="124dp"
        android:text="@string/btn_whatsapp"
        android:theme="@style/theme_btn_main2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/btnLinkedin" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="271dp"
        android:text="@string/title_message"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/txtmsg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:autofillHints="@string/txt_message"
        android:ems="10"
        android:hint="@string/txt_message"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btnMail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="160dp"
        android:text="@string/txt_btn_msg"
        android:theme="@style/theme_btn_main2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmsg" />
</androidx.constraintlayout.widget.ConstraintLayout>