<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgc_main"
    android:theme="@style/theme1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_radius"
        android:fontFamily="casual"
        android:paddingVertical="5dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

        <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="148dp"
        android:layout_marginBottom="500dp"
        app:civ_border_color="@color/bgc3"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck"
        android:src="@drawable/img_about_me"    />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="122dp"
        android:fontFamily="casual"
        android:text="@string/txt_nombre"
        android:textColor="@color/color_txt4"
        android:textFontWeight="600"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/border_radius"
        android:fontFamily="casual"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/sub_titulo"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="81dp"
        android:background="@drawable/border_radius"
        android:fontFamily="casual"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/sub_titulo2"
        android:textAlignment="center"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="360dp"
        android:layout_height="158dp"
        android:layout_marginTop="4dp"
        android:fontFamily="casual"
        android:text="@string/txt_extracto"
        android:textAlignment="center"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/border_radius"
        android:fontFamily="casual"
        android:paddingHorizontal="30sp"
        android:paddingVertical="5sp"
        android:text="@string/extracto"
        android:textColor="@color/color_txt4"
        android:textFontWeight="900"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="168dp"
        android:clickable="true"
        android:contentDescription="@string/txt_btn"
        android:forceDarkAllowed="false"
        android:text="@string/txt_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:theme="@style/theme_btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>